--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,13 @@
 			<version>0.11.5</version>
 		</dependency>
 
+<!--		Swagger UI Dependency-->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.1.0</version>
+		</dependency>
+
 		<!-- Spring Boot Starter Test -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
